自作アプリ完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/timeTextLabel"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8C1C1"
     tools:context=".MainActivity">
@@ -26,15 +26,15 @@
 
     <TextView
         android:id="@+id/secondText"
-        android:layout_width="77dp"
-        android:layout_height="113dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-black"
-        android:text="  0"
+        android:text="5"
         android:textColor="#C51162"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="@+id/timeLabelText"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="@+id/timeLabelText"
         app:layout_constraintTop_toBottomOf="@+id/timeLabelText" />
 
@@ -52,6 +52,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/nextButton"
+        android:layout_width="51dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="564dp"
+        android:background="#C8C1C1"
+        android:scaleType="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/timeLabelText"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
     <ImageView
         android:id="@+id/huseikaiImage30"
         android:layout_width="51dp"
@@ -67,8 +79,8 @@
         android:id="@+id/huseikaiImage29"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="172dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -79,7 +91,7 @@
         android:layout_width="51dp"
         android:layout_height="61dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="184dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -89,8 +101,8 @@
         android:id="@+id/huseikaiImage27"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="172dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -100,8 +112,8 @@
         android:id="@+id/huseikaiImage26"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="412dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -133,8 +145,8 @@
         android:id="@+id/huseikaiImage23"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="132dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -155,8 +167,8 @@
         android:id="@+id/huseikaiImage21"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="320dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -177,8 +189,8 @@
         android:id="@+id/huseikaiImage19"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginStart="208dp"
+        android:layout_marginTop="172dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -188,8 +200,8 @@
         android:id="@+id/huseikaiImage18"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="236dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -210,8 +222,8 @@
         android:id="@+id/huseikaiImage16"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="248dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginStart="264dp"
+        android:layout_marginTop="256dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -232,8 +244,8 @@
         android:id="@+id/huseikaiImage14"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="352dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -243,7 +255,7 @@
         android:id="@+id/huseikaiImage13"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="116dp"
+        android:layout_marginStart="104dp"
         android:layout_marginTop="500dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -265,8 +277,8 @@
         android:id="@+id/huseikaiImage11"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="244dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -287,8 +299,8 @@
         android:id="@+id/huseikaiImage9"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="320dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -320,8 +332,8 @@
         android:id="@+id/huseikaiImage6"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="564dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="484dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -353,8 +365,8 @@
         android:id="@+id/huseikaiImage3"
         android:layout_width="51dp"
         android:layout_height="61dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="340dp"
         android:scaleType="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeLabelText"
@@ -408,13 +420,13 @@
         android:id="@+id/numberTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="sans-serif-black"
         android:text="0"
         android:textColor="#FFD600"
         android:textSize="80sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/secondText" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
